// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-remark-embedded-codesandbox generates an embedded sandbox for a nested example folder 1`] = `
Object {
  "type": "html",
  "value": "<iframe src=\\"https://codesandbox.io/api/v1/sandboxes/define?embed=1&parameters=N4IgZglgNgpgziAXKCA7AJjAHgOgBYAuAtlEqAMYD2qBMNSIAPISQHyMBGl6AnuwPRdeAllFYgAvgBoQaTLgBWCZCCo06BBmrgEABGEqVdAXl0AdEBwCGAJwsBuSTIAOV8gGsrAcxg4l1MlVqWnoVVCsiGAZsCOdYSQlEoA&query=hidenavigation%3D1%26view%3Dpreview\\" class=\\"embedded-codesandbox\\" sandbox=\\"allow-modals allow-forms allow-popups allow-scripts allow-same-origin\\"></iframe>",
}
`;

exports[`gatsby-remark-embedded-codesandbox generates an embedded sandbox for the specified example folder 1`] = `
Object {
  "type": "html",
  "value": "<iframe src=\\"https://codesandbox.io/api/v1/sandboxes/define?embed=1&parameters=N4IgZglgNgpgziAXKCA7AJjAHgOgBYAuAtlEqAMYD2qBMNSIAPISQHyMBGl6AnuwPRdeAllFYgAvgBoQaTLgBWCZCCo06BBmrgEABGEqVdAXl0AdEBwCGAJwsBuSTIAOV8gGsrAcxg4l1MlVqWnoVVCsiGAZsCOdYSQlEoA&query=hidenavigation%3D1%26view%3Dpreview\\" class=\\"embedded-codesandbox\\" sandbox=\\"allow-modals allow-forms allow-popups allow-scripts allow-same-origin\\"></iframe>",
}
`;

exports[`gatsby-remark-embedded-codesandbox generates an embedded sandbox using a custom getIframe function 1`] = `
Object {
  "type": "html",
  "value": "<iframe src=\\"https://codesandbox.io/api/v1/sandboxes/define?embed=1&parameters=N4IgZglgNgpgziAXKCA7AJjAHgOgBYAuAtlEqAMYD2qBMNSIAPISQHyMBGl6AnuwPRdeAllFYgAvgBoQaTLgBWCZCCo06BBmrgEABGEqVdAXl0AdEBwCGAJwsBuSTIAOV8gGsrAcxg4l1MlVqWnoVVCsiGAZsCOdYSQlEoA&query=hidenavigation%3D1%26view%3Dpreview\\" />",
}
`;

exports[`gatsby-remark-embedded-codesandbox generates an embedded sandbox using a custom protocol 1`] = `
Object {
  "type": "html",
  "value": "<iframe src=\\"https://codesandbox.io/api/v1/sandboxes/define?embed=1&parameters=N4IgZglgNgpgziAXKCA7AJjAHgOgBYAuAtlEqAMYD2qBMNSIAPISQHyMBGl6AnuwPRdeAllFYgAvgBoQaTLgBWCZCCo06BBmrgEABGEqVdAXl0AdEBwCGAJwsBuSTIAOV8gGsrAcxg4l1MlVqWnoVVCsiGAZsCOdYSQlEoA&query=hidenavigation%3D1%26view%3Dpreview\\" class=\\"embedded-codesandbox\\" sandbox=\\"allow-modals allow-forms allow-popups allow-scripts allow-same-origin\\"></iframe>",
}
`;

exports[`gatsby-remark-embedded-codesandbox uses a fallback value as package.json if nothing is found in folders 1`] = `"{\\"files\\":{\\"index.html\\":{\\"content\\":\\"<html><body></body></html>\\"},\\"index.js\\":{\\"content\\":\\"const foo = \\\\\\"bar\\\\\\";\\"},\\"package.json\\":{\\"content\\":{\\"name\\":\\"example\\"}}}}"`;
